--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,14 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 flask = "*"
 sqlalchemy = "*"
 graphene-sqlalchemy = "*"
 flask-graphql = "*"
+pyproj = "*"
 
 [requires]
 python_version = "3.7"
