Create simple crime incident web map.
Using Docker, GraphQL, Python, and PostgreSQL, this application
serves a simple web map show Tucson crime incidents.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ sqlalchemy = "*"
 graphene-sqlalchemy = "*"
 flask-graphql = "*"
 pyproj = "*"
+flask-dotenv = "*"
+python-dotenv = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
